@@ -1,3 +1,7 @@
+2008-Dec-08  yselkowitz
+
+	* bin/prep_fonts_dir.sh: Simplify .pcf compression code.
+
 2008-Nov-26  yselkowitz
 
 	* lib/gst-plugins0.10.cygclass: Enable experimental plugins.
